Add endpoints to allow filtering by bot presence (stats/settings)
